2006-11-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: Start parsing titles of a person
	* src/DataViews/_PedigreeView.py,
	* src/DataViews/_RelationView.py,
	* src/DisplayModels/_PeopleModel.py: Only show fallbacks for birth
	and death if role=primary
	
2006-11-09  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_HasDeath.py (apply): Match any of the
	death events.
	* src/Filters/Rules/Person/_HasBirth.py (apply): Match any of the
	birth events.

2006-11-09  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels/PageView.py: fix delete

2006-11-09  Alex Roitman  <shura@gramps-project.org>
	* data/*.svg: Add mime type icons.
	* data/*.png: Update bitmap icons to look the same as SVG.
	* data/Makefile.am: Ship SVG mime type icons.

2006-11-09  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/QuestionDialog.py: Set Window titles to make window manager
	and taskbar happy
	* src/plugins/Check.py: Add check for PersonRef referencing non
	existant person
	* src/DataViews/_RelationView.py (info_string): Use DateHandler
	instead of the date object to display the date
	* src/DataViews/_PedigreeView.py (format person:  Use DateHandler
	instead of the date object to display the date (closes #565)

2006-11-08  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/SimpleBookTitle.py: Fix the object selection.

2006-11-08  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/date_test.py: Correct import of Date object
	* src/plugins/ImportGeneWeb.py: Fix parsing of baptism date; Properly
	parse death date in case birth date is unknown

2006-11-08  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: add toolbar buttons, catch edit
	button config value change, freeze person info
	* src/GrampsCfg.py: reorder options
	* src/images/Makefile.am: install new svg files
	* src/images/parents.svg: button for toolbar
	* src/images/spouse.svg: button for toolbar
	* src/gramps_main.py: register new stock icons
